--- a/UrbanShoes/Views/Categories/Index.cshtml
+++ b/UrbanShoes/Views/Categories/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<BabyStore.Models.Category>
+﻿@model IEnumerable<UrbanShoes.Models.Category >
 
 @{
     ViewBag.Title = "Categories";
