--- a/UrbanShoes/Views/Products/Index.cshtml
+++ b/UrbanShoes/Views/Products/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model BabyStore.ViewModels.ProductIndexViewModel
+﻿@model UrbanShoes.ViewModels.ProductIndexViewModel
 
 @{
     ViewBag.Title = "Products";
