--- a/UrbanShoes/Content/SliderCss.css
+++ b/UrbanShoes/Content/SliderCss.css
@@ -140,7 +140,7 @@ ol, li {
         top: 50%;
         left: 50%;
         transform: translate3d(-50%,-40%,70px);
-        color: #fff;
+        color: #000000;
         font-size: 2em;
     }
 
@@ -194,7 +194,7 @@ ol, li {
     display: inline-block;
     width: 1.5rem;
     height: 1.5rem;
-    background-color: #333;
+    background-color: #000000;
     background-clip: content-box;
     border: 0.25rem solid transparent;
     border-radius: 50%;
@@ -231,7 +231,7 @@ ol, li {
 .carousel::after {
     content: '';
     z-index: 1;
-    background-color: #333;
+    background-color: #000;
     background-size: 1.5rem 1.5rem;
     background-repeat: no-repeat;
     background-position: center center;
