--- a/UrbanShoes/Views/Products/Delete.cshtml
+++ b/UrbanShoes/Views/Products/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model BabyStore.Models.Product
+﻿@model UrbanShoes.Models.Product
 
 @{
     ViewBag.Title = "Delete Product";
@@ -44,7 +44,8 @@
 
     </dl>
 
-    @using (Html.BeginForm()) {
+    @using (Html.BeginForm())
+    {
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
