--- a/UrbanShoes/Views/Products/Edit.cshtml
+++ b/UrbanShoes/Views/Products/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model BabyStore.Models.Product
+﻿@model UrbanShoes.Models.Product
 
 @{
     ViewBag.Title = "Edit Product";
@@ -9,7 +9,7 @@
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-    
+
     <div class="form-horizontal">
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
