--- a/UrbanShoes/Views/Categories/Details.cshtml
+++ b/UrbanShoes/Views/Categories/Details.cshtml
@@ -1,12 +1,13 @@
 ﻿@model UrbanShoes.Models.Category
 
 @{
-    ViewBag.Title = "Category Details";
+    ViewBag.Title = "Details";
 }
 
-<h2>@ViewBag.Title</h2>
+<h2>Details</h2>
 
 <div>
+    <h4>Category</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
