--- a/UrbanShoes/Views/Categories/Index.cshtml
+++ b/UrbanShoes/Views/Categories/Index.cshtml
@@ -1,10 +1,10 @@
-﻿@model IEnumerable<UrbanShoes.Models.Category >
+﻿@model IEnumerable<UrbanShoes.Models.Category>
 
 @{
-    ViewBag.Title = "Categories";
+    ViewBag.Title = "Index";
 }
 
-<h2>@ViewBag.Title</h2>
+<h2>Index</h2>
 
 <p>
     @Html.ActionLink("Create New", "Create")
@@ -20,7 +20,7 @@
 @foreach (var item in Model) {
     <tr>
         <td>
-            @Html.ActionLink(item.Name, "Index", "Products", new { category = item.Name }, null)
+            @Html.DisplayFor(modelItem => item.Name)
         </td>
         <td>
             @Html.ActionLink("Edit", "Edit", new { id=item.ID }) |
