--- a/UrbanShoes/Content/IndexStyles.css
+++ b/UrbanShoes/Content/IndexStyles.css
@@ -1,16 +1,11 @@
 ﻿body {
-    padding: 0;
-    
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 30vh;
     background: #000;
 }
 #divback {
     position: absolute;
     top: 30%;
     margin-top: -50px;
+    right:30%;
     height: 1024px;
     width: 640px;
     background-image: url(../Image/background1.png);
@@ -26,6 +21,7 @@ h2 {
 }
 #divdrop {
     position: absolute;
+    right:37%;
     top: 15%;
     margin-top: -50px;
   }
