--- a/UrbanShoes/Views/Categories/Create.cshtml
+++ b/UrbanShoes/Views/Categories/Create.cshtml
@@ -1,17 +1,18 @@
 ﻿@model UrbanShoes.Models.Category
-    
-@{
 
-    ViewBag.Title = "Create Category";
+@{
+    ViewBag.Title = "Create";
 }
 
-<h2>@ViewBag.Title</h2>
+<h2>Create</h2>
+
 
 @using (Html.BeginForm()) 
 {
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
+        <h4>Category</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
