--- a/UrbanShoes/Views/Categories/Delete.cshtml
+++ b/UrbanShoes/Views/Categories/Delete.cshtml
@@ -1,13 +1,14 @@
 ﻿@model UrbanShoes.Models.Category
 
 @{
-    ViewBag.Title = "Delete Category";
+    ViewBag.Title = "Delete";
 }
 
-<h2>@ViewBag.Title</h2>
+<h2>Delete</h2>
 
-<h3>Are you sure you want to delete this category?</h3>
+<h3>Are you sure you want to delete this?</h3>
 <div>
+    <h4>Category</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -20,8 +21,7 @@
 
     </dl>
 
-    @using (Html.BeginForm())
-    {
+    @using (Html.BeginForm()) {
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
