--- a/UrbanShoes/Views/Categories/Edit.cshtml
+++ b/UrbanShoes/Views/Categories/Edit.cshtml
@@ -1,17 +1,18 @@
 ﻿@model UrbanShoes.Models.Category
 
 @{
-    ViewBag.Title = "Edit Category";
+    ViewBag.Title = "Edit";
 }
 
-<h2>@ViewBag.Title</h2>
+<h2>Edit</h2>
 
 
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-
+    
     <div class="form-horizontal">
+        <h4>Category</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.ID)
