--- a/UrbanShoes/Views/Shared/_Layout.cshtml
+++ b/UrbanShoes/Views/Shared/_Layout.cshtml
@@ -6,7 +6,10 @@
     <title>@ViewBag.Title - Urban Shoes</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
-    
+    <link rel="stylesheet" href="~/Content/style.css" type="text/css" media="all" /><!-- Style-CSS -->
+    <link href="~/Content/font-awesome.css" rel="stylesheet"><!-- font-awesome-icons -->
+
+
 </head>
 <body>
     <div class="navbar navbar-inverse navbar-fixed-top">
