--- a/UrbanShoes/Views/Account/Login.cshtml
+++ b/UrbanShoes/Views/Account/Login.cshtml
@@ -1,63 +1,69 @@
-﻿@using UrbanShoes.Models
-@model LoginViewModel
+﻿
 @{
-    ViewBag.Title = "Log in";
+    ViewBag.Title = "Login";
+    Layout = "~/Views/Account/_LayoutPage1.cshtml";
 }
 
-<h2>@ViewBag.Title.</h2>
-<div class="row">
-    <div class="col-md-8">
-        <section id="loginForm">
-            @using (Html.BeginForm("Login", "Account", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
-            {
-                @Html.AntiForgeryToken()
-                <h4>Use a local account to log in.</h4>
-                <hr />
-                @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-                <div class="form-group">
-                    @Html.LabelFor(m => m.Email, new { @class = "col-md-2 control-label" })
-                    <div class="col-md-10">
-                        @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
-                        @Html.ValidationMessageFor(m => m.Email, "", new { @class = "text-danger" })
+
+
+    <link href="~/Views/Shared/_Layout.cshtml"/>
+<section class="w3l-form-36">
+    <div class="form-36-mian section-gap">
+        <div class="wrapper">
+            <div class="form-inner-cont">
+                <h3>Login now</h3>
+                <form action="#" method="post" class="signin-form">
+                    <div class="form-input">
+                        <span class="fa fa-envelope-o" aria-hidden="true"></span> <input type="email" name="email"
+                                                                                         placeholder="Username" required />
+                    </div>
+                    <div class="form-input">
+                        <span class="fa fa-key" aria-hidden="true"></span> <input type="password" name="password" placeholder="Password"
+                                                                                  required />
+                    </div>
+                    <div class="login-remember d-grid">
+                        <label class="check-remaind">
+                            <input type="checkbox">
+                            <span class="checkmark"></span>
+                            <p class="remember">Remember me</p>
+                        </label>
+                  
+                        <button class="btn theme-button">Login</button>
+                    </div>
+                    <div class="new-signup">
+                        <a href="Register" class="signuplink">Forgot password?</a>
+                    </div>
+                </form>
+                <div class="social-icons">
+                    <p class="continue"><span>Or</span></p>
+                    <div class="social-login">
+                        <a href="#facebook">
+                            <div class="facebook">
+                                <span class="fa fa-facebook" aria-hidden="true"></span>
+
+                            </div>
+                        </a>
+                        <a href="#google">
+                            <div class="google">
+                                <span class="fa fa-google-plus" aria-hidden="true"></span>
+                            </div>
+                        </a>
                     </div>
                 </div>
-                <div class="form-group">
-                    @Html.LabelFor(m => m.Password, new { @class = "col-md-2 control-label" })
-                    <div class="col-md-10">
-                        @Html.PasswordFor(m => m.Password, new { @class = "form-control" })
-                        @Html.ValidationMessageFor(m => m.Password, "", new { @class = "text-danger" })
-                    </div>
-                </div>
-                <div class="form-group">
-                    <div class="col-md-offset-2 col-md-10">
-                        <div class="checkbox">
-                            @Html.CheckBoxFor(m => m.RememberMe)
-                            @Html.LabelFor(m => m.RememberMe)
-                        </div>
-                    </div>
-                </div>
-                <div class="form-group">
-                    <div class="col-md-offset-2 col-md-10">
-                        <input type="submit" value="Log in" class="btn btn-default" />
-                    </div>
-                </div>
+                <p class="signup">Don’t have an account? <a href="Register" class="signuplink">Sign up</a></p>
+                <button onclick="location.href = 'https://localhost:44348/';" class="btn theme-button">Back</button>
+            </div>
+
+            <!-- copyright -->
+            <div class="copy-right">
                 <p>
-                    @Html.ActionLink("Register as a new user", "Register")
+                    © 2020 Active Login Form. All rights reserved | Design by <a href="http://w3layouts.com/"
+                                                                                 target="_blank">W3Layouts</a>
                 </p>
-                @* Enable this once you have account confirmation enabled for password reset functionality
-                    <p>
-                        @Html.ActionLink("Forgot your password?", "ForgotPassword")
-                    </p>*@
-            }
-        </section>
+            </div>
+            <!-- //copyright -->
+        </div>
     </div>
-    <div class="col-md-4">
-        <section id="socialLoginForm">
-            @Html.Partial("_ExternalLoginsListPartial", new ExternalLoginListViewModel { ReturnUrl = ViewBag.ReturnUrl })
-        </section>
-    </div>
-</div>
+</section>
 
-@section Scripts {
-    @Scripts.Render("~/bundles/jqueryval")
-}
+
