--- a/UrbanShoes/Views/Account/Register.cshtml
+++ b/UrbanShoes/Views/Account/Register.cshtml
@@ -2,11 +2,31 @@
 @{
     ViewBag.Title = "Register";
 }
+<link rel="stylesheet" href="~/Content/IndexStyles.css" />
 
-<h2>@ViewBag.Title.</h2>
+<div id="divdrop">
+
+    <h2>
+        <span>R</span>
+        <span>E</span>
+        <span>G</span>
+        <span>I</span>
+        <span>S</span>
+        <span>T</span>
+        <span>E</span>
+        <span>R</span>
+
+
+
+    </h2>
+</div>
+
+
+
 
 @using (Html.BeginForm("Register", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
 {
+<div id="divunder">
     @Html.AntiForgeryToken()
     <h4>Create a new account.</h4>
     <hr />
@@ -34,8 +54,11 @@
             <input type="submit" class="btn btn-default" value="Register" />
         </div>
     </div>
-}
+</div>
+        }
+ 
 
-@section Scripts {
-    @Scripts.Render("~/bundles/jqueryval")
-}
+
+    @section Scripts {
+        @Scripts.Render("~/bundles/jqueryval")
+    }
