--- a/UrbanShoes/Views/Products/Index.cshtml
+++ b/UrbanShoes/Views/Products/Index.cshtml
@@ -4,56 +4,77 @@
     ViewBag.Title = "Products";
 }
 
-<h2>@ViewBag.Title</h2>
+<link rel="stylesheet" href="~/Content/IndexStyles.css" />
 
-<p>
-    @Html.ActionLink("Create New", "Create")
-    @using (Html.BeginForm("Index", "Products", FormMethod.Get))
-    {
-        <label>Filter by category:</label>
-        @Html.DropDownListFor(vm => vm.Category, Model.CatFilterItems, "All");
-        <input type="submit" value="Filter" />
-        <input type="hidden" name="Search" id="Search" value="@Model.Search" />
-    }
-</p>
+<div id="divdrop">
 
-<table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.Category)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Products.First().Name)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Products.First().Description)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Products.First().Price)
-        </th>
-        <th></th>
-    </tr>
+    <h2>
+        <span>P</span>
+        <span>R</span>
+        <span>O</span>
+        <span>D</span>
+        <span>U</span>
+        <span>C</span>
+        <span>T</span>
+        <span>S</span>
 
-    @foreach (var item in Model.Products)
-    {
+
+
+    </h2>
+
+    </div>
+
+<div id="divunder">
+
+    <p>
+        @Html.ActionLink("Create New", "Create")
+        @using (Html.BeginForm("Index", "Products", FormMethod.Get))
+        {
+            <label>Filter by category:</label>
+            @Html.DropDownListFor(vm => vm.Category, Model.CatFilterItems, "All");
+            <input type="submit" value="Filter" />
+            <input type="hidden" name="Search" id="Search" value="@Model.Search" />
+        }
+    </p>
+
+    <table class="table">
         <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Category.Name)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Name)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Description)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Price)
-            </td>
-            <td>
-                @Html.ActionLink("Edit", "Edit", new { id = item.ID }) |
-                @Html.ActionLink("Details", "Details", new { id = item.ID }) |
-                @Html.ActionLink("Delete", "Delete", new { id = item.ID })
-            </td>
+            <th>
+                @Html.DisplayNameFor(model => model.Category)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Products.First().Name)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Products.First().Description)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Products.First().Price)
+            </th>
+            <th></th>
         </tr>
-    }
-</table>
+
+        @foreach (var item in Model.Products)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Category.Name)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Name)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Description)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Price)
+                </td>
+                <td>
+                    @Html.ActionLink("Edit", "Edit", new { id = item.ID }) |
+                    @Html.ActionLink("Details", "Details", new { id = item.ID }) |
+                    @Html.ActionLink("Delete", "Delete", new { id = item.ID })
+                </td>
+            </tr>
+        }
+    </table>
+    </div>
