--- a/UrbanShoes/Views/ProductImages/Index.cshtml
+++ b/UrbanShoes/Views/ProductImages/Index.cshtml
@@ -27,7 +27,7 @@
                 <td>
                     @if (!String.IsNullOrWhiteSpace(item.FileName))
                     {
-                        //<img src="@(Url.Content(Constants.ProductImagePath) + item.FileName)">
+                        <img src="@(Url.Content(Constants.ProductImagePath) + item.FileName)">
                     }
                 </td>
                 <td>
