--- a/UrbanShoes/Views/ProductImages/Upload.cshtml
+++ b/UrbanShoes/Views/ProductImages/Upload.cshtml
@@ -1,8 +1,11 @@
 ﻿@model UrbanShoes.Models.ProductImage
 
+
 @{
     ViewBag.Title = "Upload Product Images";
 }
+
+<link rel="stylesheet" href="~/Content/IndexStyles.css" />
 
 <h2>@ViewBag.Title</h2>
 
