--- a/UrbanShoes/Views/Shared/_Layout.cshtml
+++ b/UrbanShoes/Views/Shared/_Layout.cshtml
@@ -29,7 +29,8 @@
                     <li>@Html.ActionLink("Shop by Category", "Index", "Categories")</li>
                     <li>@Html.ActionLink("View all our Products", "Index", "Products")</li>
                     <li>@Html.ActionLink("Basket", "Index", "Basket") </li>
-                    <li>@Html.ActionLink("ProductImages", "Upload", "ProductImages")</li>
+                    <li>@Html.ActionLink("Manage Images", "Upload", "ProductImages")</li>
+                   
 
 
                 </ul>
