--- a/UrbanShoes/Views/Account/Login.cshtml
+++ b/UrbanShoes/Views/Account/Login.cshtml
@@ -12,28 +12,33 @@
         <div class="wrapper">
             <div class="form-inner-cont">
                 <h3>Login now</h3>
-                <form action="#" method="post" class="signin-form">
-                    <div class="form-input">
-                        <span class="fa fa-envelope-o" aria-hidden="true"></span> <input type="email" name="email"
-                                                                                         placeholder="Username" required />
-                    </div>
-                    <div class="form-input">
-                        <span class="fa fa-key" aria-hidden="true"></span> <input type="password" name="password" placeholder="Password"
-                                                                                  required />
-                    </div>
-                    <div class="login-remember d-grid">
-                        <label class="check-remaind">
-                            <input type="checkbox">
-                            <span class="checkmark"></span>
-                            <p class="remember">Remember me</p>
-                        </label>
-                  
-                        <button class="btn theme-button">Login</button>
-                    </div>
-                    <div class="new-signup">
-                        <a href="Register" class="signuplink">Forgot password?</a>
-                    </div>
-                </form>
+                @using (Html.BeginForm("Login", "Account", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
+                {
+            <form>
+                @Html.AntiForgeryToken()
+                <div class="form-input">
+                    <span class="fa fa-envelope-o" aria-hidden="true"></span> <input type="email" name="email"
+                                                                                     placeholder="Username" required />
+                </div>
+                <div class="form-input">
+                    <span class="fa fa-key" aria-hidden="true"></span> <input type="password" name="password" placeholder="Password"
+                                                                              required />
+                </div>
+                <div class="login-remember d-grid">
+                    <label class="check-remaind">
+                        <input type="checkbox">
+                        <span class="checkmark"></span>
+                        <p class="remember">Remember me</p>
+                    </label>
+
+                    <button type="submit" class="btn theme-button">Login</button>
+                </div>
+                <div class="new-signup">
+                    <a href="Register" class="signuplink">Forgot password?</a>
+                </div>
+            </form>
+                }
+               
                 <div class="social-icons">
                     <p class="continue"><span>Or</span></p>
                     <div class="social-login">
@@ -53,6 +58,7 @@
                 <p class="signup">Don’t have an account? <a href="Register" class="signuplink">Sign up</a></p>
                 <button onclick="location.href = 'https://localhost:44348/';" class="btn theme-button">Back</button>
             </div>
+               
 
             <!-- copyright -->
             <div class="copy-right">
