--- a/UrbanShoes/Views/Products/Details.cshtml
+++ b/UrbanShoes/Views/Products/Details.cshtml
@@ -40,6 +40,38 @@
         <dd>
             @Html.DisplayFor(model => model.Price)
         </dd>
+        @if (Model.ProductImageMappings != null && Model.ProductImageMappings.Any())
+        {
+            <dt></dt>
+            <dd>
+                <img src="@(Url.Content(Constants.ProductImagePath) + Model.ProductImageMappings.OrderBy(pim =>	pim.ImageNumber).ElementAt(0).ProductImage.FileName)" style=padding:5px>
+            </dd>
+            <dt></dt>
+            <dd>
+                @foreach (var item in Model.ProductImageMappings.OrderBy(pim => pim.ImageNumber))
+                {
+                    <a href="@(Url.Content(Constants.ProductImagePath) + item.ProductImage.FileName)">
+                        <img src="@(Url.Content(Constants.ProductThumbnailPath) + item.ProductImage.FileName)" style=padding:5px>
+                    </a>
+                }
+            </dd>
+        }
+        <dt>
+            Quantity:
+        </dt>
+        <dd>
+            @using (Html.BeginForm("AddToBasket", "Basket"))
+            {
+                @Html.AntiForgeryToken()
+                @Html.HiddenFor(model => model.ID)
+                @Html.DropDownList("quantity", Enumerable.Range(1, 10).Select(i => new SelectListItem { Text = i.ToString(), Value = i.ToString() }))
+                <input type="submit" class="btn btn-primary btn-xs" value="Add to Basket">
+            }
+        </dd>
+
+
+
+
 
     </dl>
 </div>
