--- a/UrbanShoes/Content/IndexStyles.css
+++ b/UrbanShoes/Content/IndexStyles.css
@@ -43,6 +43,11 @@ h2 {
     top: 20%;
     margin-top: -50px;
   }
+#divdrop2 {
+    position: absolute;
+    top: 20%;
+    margin-top: -50px;
+}
 
     h2 span {
     
