--- a/UrbanShoes/Views/Basket/Index.cshtml
+++ b/UrbanShoes/Views/Basket/Index.cshtml
@@ -4,7 +4,7 @@
 <link rel="stylesheet" href="~/Content/SliderCss.css" />
 
 
-<div id="divdrop">
+<div id="divdrop2">
 
     <h2>
         <span>B</span>
@@ -20,7 +20,7 @@
     </h2>
 </div>
 
-<div id="divback">
+<div id="divback2">
 
     <h2>@ViewBag.Title</h2>
     @if (Model.BasketLines.Count() > 0)
