--- a/UrbanShoes/Views/Account/Login.cshtml
+++ b/UrbanShoes/Views/Account/Login.cshtml
@@ -1,4 +1,5 @@
-﻿
+﻿@using UrbanShoes.Models
+@model LoginViewModel
 @{
     ViewBag.Title = "Login";
     Layout = "~/Views/Account/_LayoutPage1.cshtml";
@@ -6,7 +7,7 @@
 
 
 
-    <link href="~/Views/Shared/_Layout.cshtml"/>
+<link href="~/Views/Shared/_Layout.cshtml" />
 <section class="w3l-form-36">
     <div class="form-36-mian section-gap">
         <div class="wrapper">
@@ -14,9 +15,13 @@
                 <h3>Login now</h3>
                 @using (Html.BeginForm("Login", "Account", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
                 {
+
             <form>
                 @Html.AntiForgeryToken()
+                @Html.ValidationSummary(true, "", new { @class = "text-danger" })
                 <div class="form-input">
+
+
                     <span class="fa fa-envelope-o" aria-hidden="true"></span> <input type="email" name="email"
                                                                                      placeholder="Username" required />
                 </div>
@@ -38,7 +43,7 @@
                 </div>
             </form>
                 }
-               
+
                 <div class="social-icons">
                     <p class="continue"><span>Or</span></p>
                     <div class="social-login">
@@ -58,7 +63,7 @@
                 <p class="signup">Don’t have an account? <a href="Register" class="signuplink">Sign up</a></p>
                 <button onclick="location.href = 'https://localhost:44348/';" class="btn theme-button">Back</button>
             </div>
-               
+
 
             <!-- copyright -->
             <div class="copy-right">
@@ -69,6 +74,7 @@
             </div>
             <!-- //copyright -->
         </div>
+    
     </div>
 </section>
 
