--- a/UrbanShoes/Views/Products/Create.cshtml
+++ b/UrbanShoes/Views/Products/Create.cshtml
@@ -39,10 +39,10 @@
     </div>
 
     <div class="form-group">
-        @Html.LabelFor(model => model.CategoryID, "Category", htmlAttributes: new { @class = "control-label col-md-2" })
+        @Html.LabelFor(model => model.Category_ID, "Category", htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
-            @Html.DropDownList("CategoryID", null, htmlAttributes: new { @class = "form-control" })
-            @Html.ValidationMessageFor(model => model.CategoryID, "", new { @class = "text-danger" })
+            @*@Html.DropDownList("CategoryID", null, htmlAttributes: new { @class = "form-control" })*@
+            @Html.ValidationMessageFor(model => model.Category_ID, "", new { @class = "text-danger" })
         </div>
     </div>
 
@@ -58,7 +58,7 @@
         <div class="form-group">
            <label class="contol-label col-md-2"> Product Image @(i+1):</label>
            <div class="col-md-10">
-               @Html.DropDownListFor(vm => vm.ProductImages, Model.ImageLists[i], "Choose Image", htmlAttributes: new { @class = "form control" })
+               @*@Html.DropDownListFor(vm => vm.ProductImages, Model.ImageLists[i], "Choose Image", htmlAttributes: new { @class = "form control" })*@
                @Html.ValidationMessageFor(model => model.ImageLists, "", new { @class = "text-danger" })
 
            </div>
