--- a/UrbanShoes/Views/Products/Index.cshtml
+++ b/UrbanShoes/Views/Products/Index.cshtml
@@ -31,7 +31,7 @@
         @using (Html.BeginForm("Index", "Products", FormMethod.Get))
         {
             <label>Filter by category:</label>
-            @Html.DropDownListFor(vm => vm.Category, Model.CatFilterItems, "All");
+            @*@Html.DropDownListFor(vm => vm.Category, Model.CatFilterItems, "All");*@
             <input type="submit" value="Filter" />
             <input type="hidden" name="Search" id="Search" value="@Model.Search" />
         }
