--- a/UrbanShoes/Views/Basket/Index.cshtml
+++ b/UrbanShoes/Views/Basket/Index.cshtml
@@ -4,7 +4,7 @@
 <link rel="stylesheet" href="~/Content/SliderCss.css" />
 
 
-<div id="divdrop2">
+<div id="basketname">
 
     <h2>
         <span>B</span>
