--- a/UrbanShoes/Views/Categories/Index.cshtml
+++ b/UrbanShoes/Views/Categories/Index.cshtml
@@ -19,9 +19,7 @@
         <span>R</span>
         <span>Y</span>
 
-
-
-    </h2>
+    </h2> 
 </div>
 
 
@@ -45,8 +43,7 @@
                     @Html.DisplayFor(modelItem => item.Name)
                 </td>
                 <td>
-                    @Html.ActionLink("Edit", "Edit", new { id = item.ID }) |
-                    @Html.ActionLink("Details", "Details", new { id = item.ID }) |
+                    @Html.ActionLink("Edit", "Edit", new { id = item.ID }) 
                     @Html.ActionLink("Delete", "Delete", new { id = item.ID })
                 </td>
             </tr>
