--- a/UrbanShoes/Views/Products/Details.cshtml
+++ b/UrbanShoes/Views/Products/Details.cshtml
@@ -5,8 +5,9 @@
 }
 
 <h2>@ViewBag.Title</h2>
+<link rel="stylesheet" href="~/Content/IndexStyles.css" />
 
-<div>
+<div id="divback2">
     <hr />
     <dl class="dl-horizontal">
         <dt>
