--- a/UrbanShoes/Views/Shared/_Layout.cshtml
+++ b/UrbanShoes/Views/Shared/_Layout.cshtml
@@ -28,7 +28,7 @@
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
                     <li>@Html.ActionLink("Shop by Category", "Index", "Categories")</li>
                     <li>@Html.ActionLink("View all our Products", "Index", "Products")</li>
-                    <li>@Html.ActionLink("Manage Images", "Upload", "ProductImages")</li>
+                    <li>@Html.ActionLink("Orders", "Index", "Orders")</li>
                    
 
 
